--- a/calendarProto/calender3.html
+++ b/calendarProto/calender3.html
@@ -289,6 +289,14 @@
                         return line.push()
                     })
                 });
+                //放置默认td
+                domData.forEach(function (row, index1) {
+                    row.forEach(function (line, index2) {
+                        for (let i = 0; i < 7; i++) {
+                            let theDay = dayArr()
+                        }
+                    })
+                });
                 return domData;
             },
         }
